--- a/app/views/anasayfa/index.html.erb
+++ b/app/views/anasayfa/index.html.erb
@@ -151,6 +151,15 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <% end %>
   </tbody>
 </table>
+<center>© 2018 Web Tasarım Projem | Design by Nurullah ŞAHİN</center>
+
+<br>------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</br>
+<h1><center>Ruby ortam değişkenlerinin gösterilmesi</center></h1>
+<center>
+<% request.env.each do |key, value| %>
+ <strong><%= key %></strong> => <%= value %><br/>
+<% end %>
+</center>
 <!-- /contact section -->
 <!-- map section -->
 
@@ -167,7 +176,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		
     </div>
     
-<center>© 2018 Web Tasarım Projem | Design by Nurullah ŞAHİN</center>
+
 	<div class="modal fade" id="news1" tabindex="-1" role="dialog" aria-labelledby="largeModal" aria-hidden="true">
 		<div class="modal-dialog modal-lg">
 			<div class="modal-content">
